// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Basic renders colSpan correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="rc-table-cell"
            colspan="2"
            rowspan="1"
          >
            Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
            colspan="2"
          >
            John
          </td>
        </tr>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
          >
            Terry
          </td>
          <td
            class="rc-table-cell"
          >
            Garner
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic renders correctly 1`] = `
<div
  class="test-prefix test-class-name"
>
  <div
    class="test-prefix-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="test-prefix-cell"
            colspan="1"
            rowspan="1"
          >
            Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="test-prefix-row test-prefix-row-level-0"
        >
          <td
            class="test-prefix-cell"
          >
            Lucy
          </td>
        </tr>
        <tr
          class="test-prefix-row test-prefix-row-level-0"
        >
          <td
            class="test-prefix-cell"
          >
            Jack
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic renders rowSpan correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="rc-table-cell"
            colspan="1"
            rowspan="1"
          >
            First Name
          </th>
          <th
            class="rc-table-cell"
            colspan="1"
            rowspan="1"
          >
            Last Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
          >
            John
          </td>
          <td
            class="rc-table-cell"
            rowspan="2"
          >
            Doe
          </td>
        </tr>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
          >
            Terry
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
